--- a/package.json
+++ b/package.json
@@ -23,22 +23,25 @@
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
     "agm-direction": "^0.7.9",
+    "angular-fusioncharts": "^3.0.4",
     "angular-web-storage": "^7.0.0-beta.1",
     "bootstrap": "^4.4.1",
+    "fusioncharts": "^3.15.1-sr.1",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
     "ng-multiselect-dropdown": "^0.2.10",
     "ng6-toastr-notifications": "^1.0.4",
-    "ngx-bootstrap": "^5.5.0",
+    "ngx-bootstrap": "^5.6.2",
     "ngx-google-places-autocomplete": "^2.0.4",
+    "ngx-pagination": "^5.0.0",
     "ngx-spinner": "^9.0.1",
     "ngx-ui-switch": "^8.3.0",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.6.3",
     "socket.io-client": "^2.3.0",
     "sweetalert2": "^9.10.2",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
-    "ngx-pagination": "^5.0.0"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.22",
